--- a/phonebook/Makefile
+++ b/phonebook/Makefile
@@ -5,13 +5,9 @@ CFLAGS_opt  = -O0
 
 EXEC = phonebook_orig phonebook_opt
 
-GIT_HOOKS := .git/hooks/pre-commit
 .PHONY: all
-all: $(GIT_HOOKS) $(EXEC)
+all: $(EXEC)
 
-$(GIT_HOOKS):
-	@scripts/install-git-hooks
-	@echo
 
 SRCS_common = main.c
 
