Prototype of hash table

--- a/phonebook/Makefile
+++ b/phonebook/Makefile
@@ -14,8 +14,8 @@ CFLAGS_opt  = -O0
 SRCS_common = main.c
 
 # targets want to execute
-EXEC = phonebook_orig phonebook_small_struct  phonebook_list2bst
-# EXEC = phonebook_bst
+# EXEC = phonebook_orig phonebook_small_struct  phonebook_list2bst phonebook_hash
+EXEC = phonebook_hash
 
 debug: CFLAGS_common += -g
 debug: $(EXEC)
@@ -42,6 +42,11 @@ phonebook_bst: $(SRCS_common) phonebook_bst.c phonebook_bst.h
 phonebook_list2bst: $(SRCS_common) phonebook_list2bst.c phonebook_list2bst.h
 	$(CC) $(CFLAGS_common) $(CFLAGS_opt) $(CFLAGS_compiler) \
 		-DIMPL="\"$@.h\"" -D_LIST2BST -o $@ \
+		$(SRCS_common) $@.c
+
+phonebook_hash: $(SRCS_common) phonebook_hash.c phonebook_hash.h
+	$(CC) $(CFLAGS_common) $(CFLAGS_opt) $(CFLAGS_compiler) \
+		-DIMPL="\"$@.h\"" -D_HASH -o $@ \
 		$(SRCS_common) $@.c
 
 run: $(EXEC)
