Finish the hash table for phonebook
1. Finish the hash table to save phonebook.
2. Run and test.
3. Draw the result.

--- a/phonebook/.gitignore
+++ b/phonebook/.gitignore
@@ -19,6 +19,7 @@ phonebook_bst.txt
 phonebook_orig.txt
 phonebook_small_struct.txt
 phonebook_list2bst.txt
+phonebook_hash.txt
 output.txt
 runtime.png
 
