--- a/phonebook/Makefile
+++ b/phonebook/Makefile
@@ -66,7 +66,10 @@ cache-test: $(EXEC)
 	perf stat --repeat 100 \
 		-e cache-misses,cache-references,instructions,cycles \
 		./phonebook_list2bst
-
+	perf stat --repeat 100 \
+		-e cache-misses,cache-references,instructions,cycles \
+		./phonebook_hash
+		
 output.txt: cache-test calculate
 	./calculate
 
