Using the basic methods to improve the program.
1. Modify the settings of the Makefile.
Add GCC option of openMP and delete the git-hooks.
2. We add many methods to improve the performance of the program, as follows:
        Inline Function
        Loop unrolling
        MACRO
        openMP
3. Write a README, including the result of the execution and the size of the program.

--- a/raytracing/Makefile
+++ b/raytracing/Makefile
@@ -1,20 +1,27 @@
 EXEC = raytracing
 
-.PHONY: all
 all: $(EXEC)
 
+$(GIT_HOOKS):
+	@scripts/install-git-hooks
+	@echo
 
 CC ?= gcc
-CFLAGS = -std=gnu99 -Wall -O0 -g
-LDFLAGS = -lm
+CFLAGS = \
+	-std=gnu99 -Wall -O0 -g -fopenmp
+LDFLAGS = \
+	-lm -lgomp
 
-# ifeq ($(strip $(PROFILE)),1)
+ifeq ($(strip $(PROFILE)),1)
 PROF_FLAGS = -pg
 CFLAGS += $(PROF_FLAGS)
 LDFLAGS += $(PROF_FLAGS)
-# endif
+endif
 
-OBJS := objects.o raytracing.o main.o
+OBJS := \
+	objects.o \
+	raytracing.o \
+	main.o
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
@@ -24,7 +31,6 @@ $(EXEC): $(OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 main.o: use-models.h
-
 use-models.h: models.inc Makefile
 	@echo '#include "models.inc"' > use-models.h
 	@egrep "^(light|sphere|rectangular) " models.inc | \
