Fix error of Makefile
1. make clean will include remove *.txt
2. Test and output the new runtime.png

--- a/phonebook/Makefile
+++ b/phonebook/Makefile
@@ -81,5 +81,4 @@ calculate: calculate.c
 
 .PHONY: clean
 clean:
-	$(RM) $(EXEC) *.o perf.* \
-	      	calculate orig.txt opt.txt output.txt runtime.png
+	$(RM) $(EXEC) *.o perf.* calculate *.txt
